fix : resolve PR feedback
