# docs/swagger.json
@@ -1,14 +1,32 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Đây là tài liệu API cho hệ thống quản lý Bookmark.",
+        "description": "API Swagger for Bookmark-Management.",
         "title": "Bookmark Management API",
         "contact": {},
-        "version": "1.0"
+        "version": "1.0.0"
     },
-    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/genpass": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "password"
+                ],
+                "summary": "Generate a random password",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.HealthCheckResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/health-check": {
             "get": {
                 "description": "Trả về trạng thái hoạt động hiện tại, tên dịch vụ và instance ID",
